# AIgeneering_four_week_course

./: README.md  main.py  pyproject.toml
02_setup/: main.py  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: basics_pydantic2.ipynb  person.json  pydantic_bsics.ipynb  pyproject.toml
04_pydantic/Kokchun/: a)_pydantic_basics.ipynb  b)_pydantic_api.ipynb  pikachu.json
05_pydantic_gemini/: cheap_houses.csv  gemini_pydantic.ipynb  gemini_pydantic_robust_output.ipynb  library.json
05_pydantic_gemini/kokchun/: a)_gemini_pydantic.ipynb  b)_gemini_pydantic_more_robust.ipynb  library.json
